# neurips_adc

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .terraform.lock.hcl  06-cay-neurips-main-kaggle-notebook.ipynb  Dockerfile  Dockerfile.beam  LICENSE  README.md  main.tf  pyproject.toml  tox.ini  variables.tf
.cloudbuild/: build_beam_image.yaml  build_image.yaml
.github/workflows/: etl.yml
notebooks/: 01-cay-test-apache-beam-tfx.ipynb  01-cay-understanding-the-data.ipynb  02-host-update-calibrating-and-binning-astronomical-data.ipynb  03-host-starter-solution.ipynb  04-cay-test-apache-beam-tfx.ipynb  05-cay-beam-etl-pipeline.ipynb  06-cay-tfx-pipeline-modeling-xp.ipynb
scripts/: trigger.sh
src/neuripsadc/: utilis.py
src/neuripsadc/etl/: __init__.py  main.py  ops.py  transforms.py
terraform/: terraform.tf  variables.tf
tests/: __init__.py
